# shader-playground

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  logging_utils.rs  main.rs  plane_buffer.rs  shader.rs
src/game_window/: app.rs  mod.rs  utils.rs
src/res/basic_shaders/: frag_simple_2d_gradient.glsl  vert.glsl
src/shader_playground/: file_watcher.rs  mod.rs  reloaded_shader.rs
